--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,4 @@
-[Private_MySQL_Server]
-;MySQL数据库连接服务
-mysql_server_ip=192.168.10.118
-mysql_server_port=3306
-mysql_server_databasename=wisdompark
-mysql_server_username=zhyq
-mysql_server_password=zhyq
-
-[Public_Server_IP_PORT]
-fdfs_server_ip=192.168.10.118
-fdfs_server_port=5620
-
+[ProxyServer]
+;代理服务端口
+front_port=9999
+back_port=9998
